<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    tools:context="hr.foi.rsc.lifeline.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_donated_liters_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="180px"
            android:textStyle="bold"
            android:textColor="@color/primary"
            tools:text="2,25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40px"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:text="@string/donated_liters" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_next_time" />

                <TextView
                    android:id="@+id/text_current_achievements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="55px"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray"
                    tools:text="29" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="28px"
                    android:text="@string/days_next_donation" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_achievements" />

                <TextView
                    android:id="@+id/text_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="55px"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    tools:text="29" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="28px"
                    android:text="@string/current_achievements" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/ic_tickets" />

                <TextView
                    android:id="@+id/text_days_to_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="55px"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    tools:text="29" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="28px"
                    android:text="@string/liters_to_free_ticket" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
